# boxoban-mcp

./: .gitignore  README.md  pyproject.toml  reproduce_issue.py
src/boxoban_mcp/: __init__.py  game.py  game_interface.py  loader.py  server.py
tests/: test_game.py  test_game_interface.py  test_server.py
tests/data/: action_invalid_move_wall.txt  action_move_from_target.txt  action_push_box_from_target.txt  board_for_params.txt  box_on_target_no_player_error.txt  box_on_target_with_player.txt  complex_board.txt  dl_2x2_all_goals.txt  dl_2x2_no_goals.txt  dl_2x2_some_goals_1.txt  dl_2x2_some_goals_2.txt  dl_corner_box_not_on_goal.txt  dl_corner_box_on_goal.txt  dl_frozen_horiz_no_escape.txt  dl_frozen_vert_escape_left.txt  dl_frozen_vert_escape_right_box.txt  dl_frozen_vert_no_escape.txt  gvm_allows_push_to_goal_near_wall.txt  gvm_allows_safe_push_to_goal.txt  gvm_prevents_corner_deadlock.txt  gvm_prevents_frozen_wall_deadlock.txt  iface_heuristic_box_on_goal.txt  iface_heuristic_fewer_goals.txt  iface_heuristic_no_boxes.txt  iface_heuristic_no_goals.txt  iface_heuristic_standard.txt  is_not_solved_game3_with_box.txt  is_solved_game1.txt  is_solved_game2.txt  is_solved_game3_ok.txt  multi_puzzle_test.txt  player_on_target.txt  single_with_header.txt  solvable_setup.txt  valid_moves_push_empty_1.txt  valid_moves_push_empty_left.txt  valid_moves_push_wall_1.txt  valid_moves_push_wall_blocked_sides.txt  valid_moves_simple_1.txt  valid_moves_simple_game_open.txt
